# Online_school

./: .dockerignore  .env_template  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
lms/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_course_subscription.py  0004_course_updated_at.py
online_school/: celery.py  settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: load_payments.py  setup_group.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_stripe_link_and_more.py  0004_alter_payments_payment_method.py  0005_alter_payments_stripe_link.py  0006_alter_payments_payment_amount.py  0007_alter_payments_payment_date.py
